Added fixes according to comments to HW4 - changes for yaml and response entity
